--- a/debian/install
+++ b/debian/install
@@ -1,2 +1,3 @@
-usr/share/openmediavault/*  usr/share/openmediavault
-var/www/openmediavault/*    var/www/openmediavault
+opt/ssautils/* opt/ssautils/
+srv/* srv/
+usr/share/openmediavault/* usr/share/openmediavault/
