--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-hpraid (6.0.1) stable; urgency=low
+
+  * Clean-up 31-hpraid using shellcheck
+
+ -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 30 Jul 2022 13:34:07 +0000
+
 openmediavault-hpraid (6.0.0) stable; urgency=low
 
   * Update for omv 6.x
