--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault-hpraid (6.0.1) stable; urgency=low
 
   * Clean-up 31-hpraid using shellcheck
+  * Simplify and improve the README.md
 
  -- OpenMediaVault Plugin Developers <plugins@omv-extras.org>  Sat, 30 Jul 2022 13:34:07 +0000
 
